# agent-escape

./: .gitignore  CLAUDE.md  DEV_FLOW.md  RESEARCH.md  SPECTATOR_DESIGN.md  UI_REWORK_SEED.md  package-lock.json  package.json  pyproject.toml  run_memory_test.py  run_qqwweerr.py  start_qqwweerr.sh  ui-feature-list.json  ui-progress.txt
.claude/agents/: ui-builder.md  ui-reviewer.md
agenttown/: auth.py  main.py  persistence.py  server.py  ui_narrative.py
agenttown/agents/: brain.py  memory.py  narrator.py  prompts.py
agenttown/scenarios/: architect.py  builder.py  escape_room.py  escape_room_chain.py  generator.py  memory_test.py  storyteller.py
agenttown/world/: actions.py  events.py  models.py  rules.py  world.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  (+1 more)
scripts/: curator-aria-check.mjs  curator-load-check.mjs  curator-map-detail.mjs  curator-regression.mjs  curator-screenshots.mjs  screenshot-suite.mjs  screenshot-tab.mjs  screenshot-tab2.mjs  screenshot-tab3.mjs  screenshot.mjs  test-agents-tab.mjs  test-controls-v2.mjs  test-controls.mjs  test-full-flow.mjs  test-library-scroll.mjs  test-mobile-controls.mjs  test-monitor-puzzles.mjs  test-puzzle-click.mjs  test-regression.mjs  test-save-complete.mjs  test-save.mjs  test-scroll-fix.mjs  test-simcontrols.mjs
tests/: test_actions_and_rules.py  test_agent_regression.py  test_agents.py  test_escape_room.py  test_memory_scenario.py  test_models.py  test_narrator.py  test_persistence.py  test_puzzles.py  test_server.py  test_storyteller.py  test_world.py
(+35 files in other folders)
