[project]
name = "agenttown"
version = "0.1.0"
description = "A virtual world where LLM-powered agents live and interact"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.40.0",
    "rich>=13.0",
]

[project.optional-dependencies]
server = ["fastapi", "uvicorn", "websockets"]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
agenttown = "agenttown.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
